added users to browse

--- a/Common/browse.html
+++ b/Common/browse.html
@@ -50,42 +50,59 @@
             </div> 
         </div>
         <div class="row justify-content-center">
-            
             <div id="accordion" class="route-cards col-md-8">
                 <div class="card">
                     <div class="card-header round-pill">
-                        <a class="card-link"  href="#collapseOne" data-toggle="collapse">
-                            Lowell, MA -> Denver, CO
+                        <a class="row card-link"  href="#collapseOne" data-toggle="collapse">
+                            <div class="row">
+                                <div class="col">Lowell, MA -> Denver, CO</div>
+                                <div class="col-3 border-left">User 1</div>
+                            </div>
                         </a>
                     </div>
                     <div id="collapseOne" class="collapse show" data-parent="#accordion">
                         <div class="card-body">
+                            <div class="row">
+                                <div class="col">DIRECTIONS</div>
+                                <div class="col-3 border-left"><a href="#">Profile Link</a> User 1 and all his random info</div>
+                            </div>
                             <div id="directions-panel"></div>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header">
                         <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
-                            Boston, MA -> San Diego, CA
+                            <div class="row">
+                                <div class="col">Boston, MA -> San Diego, CA</div>
+                                <div class="col-3 border-left">User 2</div>
+                            </div>
                         </a>
                     </div>
                     <div id="collapseTwo" class="collapse" data-parent="#accordion">
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            <div class="row">
+                                <div class="col">DIRECTIONS</div>
+                                <div class="col-3 border-left"><a href="#">Profile Link</a> User 2 and all his random info</div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header">
                         <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
-                            Seattle, WA -> Portland, OR
+                            <div class="row">
+                                <div class="col">Seattle, WA -> Portland, OR</div>
+                                <div class="col-3 border-left">User 3</div>
+                            </div>
                         </a>
                     </div>
                     <div id="collapseThree" class="collapse" data-parent="#accordion">
                         <div class="card-body">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            <div class="row">
+                                <div class="col">DIRECTIONS</div>
+                                <div class="col-3 border-left"><a href="#">Profile Link</a> User 3 and all his random info</div>
+                            </div>
                         </div>
                     </div>
                 </div>
