--- a/Common/Login.html
+++ b/Common/Login.html
@@ -12,124 +12,82 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="../CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="../CSS/boot_nav.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/login.css">
+    </head>
 
-        <style>
-    * {
-      margin: 0px;
-      padding: 0px;
-    }
-    body {
-      font-size: 120%;
-      background: url(../Images/road_img4.jpg);
-      background-size: cover;
-      font-family: 'Pacifico', cursive;
+    <body>
 
-    }
+        <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
+        <nav class="nav navbar navbar-dark navbar-expand-lg fixed-top">
+            <li class="nav-logo nav-item active"><a class="nav-logo-link nav-link my-lg-0" href="../index.html">Tripster</a></li>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="collapsingNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="create.html">Create</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
+                </ul>
 
-    .header {
-      width: 30%;
-      margin: 80px auto 50px;
+                <ul class="navbar-nav ml-auto">
+                    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
+                    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+        <div class="page-header header container-fluid">
+            <div class="bg-image-container container-fluid justify-content-center">
+                <div class="bg-image"></div>
+            </div>
+            <div class="login-box-container row justify-content-center">
+                <div class="login-box col-md-6">
+                	<h2 class="row justify-content-center">Login</h2>
 
-      color: #FD9301;
+                    	<div class="input-group">
+                      		<label>Username</label>
+                      		<input type="text" name="username" class="user-input" autocomplete="off">
+                        </div>
 
-      text-align: center;
+                      	<div class="input-group">
+                      		<label>Password</label>
+                      		<input type="password" name="password" class="user-input">
+                      	</div>
 
-      border-bottom: none;
-      border-radius: 10px 10px 0px 0px;
-      padding: 50px;
-    }
+                      	<div class="input-group">
+                      		<button type="submit" class="btn" name="login_user">Login</button>
+                      	</div>
 
-    .input-group {
-      margin: 10px 0px 10px 0px;
-    }
-    .input-group label {
-      display: block;
-      text-align: left;
-      margin: 3px;
-    }
-    .input-group input {
-      height: 30px;
-      width: 93%;
-      padding: 5px 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid gray;
-    }
-    .btn {
-      padding: 10px;
-      font-size: 15px;
-      color: white;
-      background: #FD9301;
-      border: none;
-      border-radius: 5px;
-    }
-    a {
-      color: red;
-    }
+                    <div class="extra-links row justify-content-center">
+                      	<p>Not yet a member?
+                            <a href="Registration.html">Sign up</a>
+                      	</p>
+                    </div>
+                    <div class="extra-links row justify-content-center">
+                		<p>Forgot your password?
+                            <a href="reset_password.html">Click here to reset it</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
 
-    /* Set a grey background color and center the text of the "sign in" section */
-    .signin {
 
-      text-align: center;
-    }
-
-    </style>
-</head>
-
-<body>
-
-    <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
-    <nav class="nav navbar navbar-dark navbar-expand-lg fixed-top">
-        <li class="nav-logo nav-item active"><a class="nav-logo-link nav-link my-lg-0" href="../index.html">Tripster</a></li>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse" id="collapsingNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item active"><a class="nav-link" href="create.html">Create</a></li>
-                <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
-                <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
-            </ul>
-
-            <ul class="navbar-nav ml-auto">
-                <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
-                <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
-            </ul>
         </div>
-    </nav>
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-    <div class="header">
-    		<h2>Login</h2>
+        <div class="footer-container container-fluid">
+            <!-- - - - - - - Footer Elements- - - - - - - - - - - - - - - - - - - - - - - - -->
+            <div class="footer-margin row">
+                <p>This is where footer stuff will go</p>
+            </div>
+            <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
+        </div>
 
-
-    	<div class="input-group">
-      		<label>Username</label>
-      		<input type="text" name="username" >
-      	</div>
-
-      	<div class="input-group">
-      		<label>Password</label>
-      		<input type="password" name="password">
-      	</div>
-
-      	<div class="input-group">
-      		<button type="submit" class="btn" name="login_user">Login</button>
-      	</div>
-
-      	<p>
-      		Not yet a member? <a href="Registration.html">Sign up</a>
-      	</p>
-
-    		<p>Forgot your password? <a href="reset_password.html">Click here to reset it</a>.</p>
-    </div>
-
-    <!-- Bootstrap Related Scripts -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+        <!-- Bootstrap Related Scripts -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
 </html>
