--- a/Common/Login.html
+++ b/Common/Login.html
@@ -44,7 +44,7 @@ and open the template in the editor.
                 <div class="bg-image"></div>
             </div>
             <div class="login-box-container row justify-content-center">
-                <div class="login-box col-md-6">
+                <div class="login-box col-lg-5">
                 	<h2 class="row justify-content-center">Login</h2>
 
                     	<div class="input-group">
