--- a/Common/Registration.html
+++ b/Common/Registration.html
@@ -14,71 +14,9 @@ and open the template in the editor.
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../CSS/boot_nav.css">
-
-
-<style>
-* {
-  margin: 0px;
-  padding: 0px;
-}
-body {
-  font-size: 120%;
-  background: url(../Images/road_img4.jpg);
-  background-size: cover;
-  font-family: 'Pacifico', cursive;
-}
-
-.header {
-  width: 30%;
-  margin: 80px auto 50px;
-  
-  color: #FD9301;
-  
-  text-align: center;
- 
-  border-bottom: none;
-  border-radius: 10px 10px 0px 0px;
-  padding: 50px;
-}
-
-.input-group {
-  margin: 10px 0px 10px 0px;
-}
-.input-group label {
-  display: block;
-  text-align: left;
-  margin: 3px;
-}
-.input-group input {
-  height: 30px;
-  width: 93%;
-  padding: 5px 10px;
-  font-size: 16px;
-  border-radius: 5px;
-  border: 1px solid gray;
-}
-.btn {
-  padding: 10px;
-  font-size: 15px;
-  color: white;
-  background: #FD9301;
-  border: none;
-  border-radius: 5px;
-}
-a {
-  color: red;
-}
-
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
-
-  text-align: center;
-}
-
-</style>
+    <link rel="stylesheet" type="text/css" href="../CSS/register.css">
 </head>
 
 <body>
@@ -103,34 +41,53 @@ a {
         </div>
     </nav>
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+    <div class="page-header header container-fluid">
+        <div class="bg-image-container container-fluid justify-content-center">
+            <div class="bg-image"></div>
+        </div>
+        <div class="login-box-container row justify-content-center">
+            <div class="login-box col-lg-5">
+                <h2 class="row justify-content-center">Create your profile</h2>
 
-    <div class="header">
-      	<h2>Create your profile</h2>
+                <div class="input-group">
+                    <label>Username</label>
+                    <input type="text" name="username" class="user-input" autocomplete="off">
+                </div>
 
+                <div class="input-group">
+                    <label>Email</label>
+                    <input type="text" name="username" class="user-input" autocomplete="off">
+                </div>
 
-       	<div class="input-group">
-      	  <label>Username</label>
-      	  <input type="text" name="username" value=" ">
-      	</div>
-      	<div class="input-group">
-      	  <label>Email</label>
-      	  <input type="email" name="email" value=" ">
-      	</div>
-      	<div class="input-group">
-      	  <label>Password</label>
-      	  <input type="password" name="password_1">
-      	</div>
-      	<div class="input-group">
-      	  <label>Confirm password</label>
-      	  <input type="password" name="password_2">
-      	</div>
-      	<div class="input-group">
-      	  <button type="submit" class="btn" name="reg_user">Register</button>
-      	</div>
+                <div class="input-group">
+                    <label>Password</label>
+                    <input type="password" name="password" class="user-input">
+                </div>
 
-      	<p>
-      		Already a member? <a href="Login.html">Sign in</a>
-      	</p>
+                <div class="input-group">
+                    <label>Confirm Password</label>
+                    <input type="password" name="password" class="user-input">
+                </div>
+
+                <div class="input-group">
+                    <button type="submit" class="btn" name="login_user">Create Account</button>
+                </div>
+
+                <div class="extra-links row justify-content-center">
+                    <p>Already a member?
+                        <a href="Login.html">Sign In</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-container container-fluid">
+        <!-- - - - - - - Footer Elements- - - - - - - - - - - - - - - - - - - - - - - - -->
+        <div class="footer-margin row">
+            <p>This is where footer stuff will go</p>
+        </div>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
     </div>
 
     <!-- Bootstrap Related Scripts -->
