--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 
         <title>Tripster</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="CSS/boot_nav.css">
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <link rel="stylesheet" type="text/css" href="CSS/boot_nav.css">
+        <link rel="stylesheet" type="text/css" href="CSS/homepage.css">
 	</head>
 
     <body>
@@ -35,7 +36,7 @@
         </nav>
         <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-        <div class = "page-wrapper">
+        <div class = "page-wrapper container-fluid">
             <div class="main-content">
                 <div class="home-big-image">
                     <div class="haze"></div>
@@ -50,8 +51,12 @@
             		</div>
                 </div>
 
-                <div id="browse-container">
-                    <p>v v Button/Info for going to Browsing page will go here v v</p>
+                <div class="browse-container container-fluid justify-content-center">
+                    <div class="browse-text-area row-sm-4"></div>
+                    Don't know where to travel?
+                    See what trips others have taken!
+                    <div class="browse-button row">
+                    </div>
                 </div>
             </div>
 
