Styling fixes and adding browse button to homepage
I went through the login and create account pages and reset password page and fixed up the styling some more to match eachother and the rest of the website. I also added an option to browse trips from the main homepage below the big image. For each of the pages I also did some mobile responsiveness fixes so that should be working fairly well. There are still some fixes to be added in terms of responsiveness but overall pages seem good. (apart from the profile page which still needs styles)

--- a/Common/Login.html
+++ b/Common/Login.html
@@ -46,7 +46,6 @@ and open the template in the editor.
             <div class="login-box-container row justify-content-center">
                 <div class="login-box col-lg-5">
                 	<h2 class="row justify-content-center">Login</h2>
-
                     	<div class="input-group">
                       		<label>Username</label>
                       		<input type="text" name="username" class="user-input" autocomplete="off">
@@ -58,7 +57,7 @@ and open the template in the editor.
                       	</div>
 
                       	<div class="input-group">
-                      		<button type="submit" class="btn" name="login_user">Login</button>
+                      		<button type="submit" class="btn" name="login_user" onclick="javascript:window.location.assign('../index.html');">Login</button>
                       	</div>
 
                     <div class="extra-links row justify-content-center">
