--- a/Common/Registration.html
+++ b/Common/Registration.html
@@ -70,7 +70,7 @@ and open the template in the editor.
                 </div>
 
                 <div class="input-group">
-                    <button type="submit" class="btn" name="login_user">Create Account</button>
+                    <button type="submit" class="btn" name="login_user" onclick="javascript:window.location.assign('../index.html');">Create Account</button>
                 </div>
 
                 <div class="extra-links row justify-content-center">
