--- a/Common/browse.html
+++ b/Common/browse.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+  <link rel="stylesheet" type="text/css" href="../CSS/homepage.css">
   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="../CSS/boot_nav.css">
   <link rel="stylesheet" type="text/css" href="../CSS/create_styles.css">
@@ -47,7 +47,7 @@
             <div class="col-md-7 search">
                 <input type="text" name="" class="searchBrowse" placeholder="Search for trips or travelers">
                 <button type="submit" class="searchbtn"><i class="fa fa-search"></i>
-            </div> 
+            </div>
         </div>
         <div class="row justify-content-center">
             <div id="accordion" class="route-cards col-md-8">
@@ -108,7 +108,7 @@
                 </div>
             </div>
         </div>
-			
+
     </div>
     <div class="footer-container container-fluid">
         <!-- - - - - - - Footer Elements- - - - - - - - - - - - - - - - - - - - - - - - -->
