--- a/Common/reset_password.html
+++ b/Common/reset_password.html
@@ -12,121 +12,66 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="../CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <link rel="stylesheet" type="text/css" href="../CSS/boot_nav.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/reset_pass.css">
+    </head>
+
+    <body>
+
+        <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
+        <nav class="nav navbar navbar-dark navbar-expand-lg fixed-top">
+            <li class="nav-logo nav-item active"><a class="nav-logo-link nav-link my-lg-0" href="../index.html">Tripster</a></li>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="collapsingNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="create.html">Create</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
+                </ul>
+
+                <ul class="navbar-nav ml-auto">
+                    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
+                    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+        <div class="page-header header container-fluid">
+            <div class="bg-image-container container-fluid justify-content-center">
+                <div class="bg-image"></div>
+            </div>
+            <div class="login-box-container row justify-content-center">
+                <div class="login-box col-lg-5">
+                    <h2 class="row justify-content-center">Change Password</h2>
+                    <div class="input-group">
+                        <label>New Password</label>
+                        <input type="text" name="username" class="user-input" autocomplete="off">
+                    </div>
+
+                    <div class="input-group">
+                        <label>Confirm Password</label>
+                        <input type="password" name="password" class="user-input">
+                    </div>
+
+                    <div class="input-group">
+                        <button type="submit" class="btn" name="login_user" onclick="javascript:window.location.assign('../index.html');">Change Password</button>
+                    </div>
+                </div>
+            </div>
 
 
-<style>
-    * {
-      margin: 0px;
-      padding: 0px;
-    }
-    body {
-      font-size: 120%;
-      background: url(../Images/road_img4.jpg);
-      background-size: cover;
-      font-family: 'Pacifico', cursive;
-
-    }
-
-    .header {
-      width: 30%;
-      margin: 80px auto 50px;
-
-      color: #FD9301;
-
-      text-align: center;
-
-      border-bottom: none;
-      border-radius: 10px 10px 0px 0px;
-      padding: 50px;
-    }
-
-    .input-group {
-      margin: 10px 0px 10px 0px;
-    }
-    .input-group label {
-      display: block;
-      text-align: left;
-      margin: 3px;
-    }
-    .input-group input {
-      height: 30px;
-      width: 93%;
-      padding: 5px 10px;
-      font-size: 16px;
-      border-radius: 5px;
-      border: 1px solid gray;
-    }
-    .changepassword {
-      padding: 10px;
-      font-size: 15px;
-      color: white;
-      background: #FD9301;
-      border: none;
-      border-radius: 5px;
-    }
-    a {
-      color: red;
-    }
-
-    /* Set a grey background color and center the text of the "sign in" section */
-    .signin {
-
-      text-align: center;
-    }
-
-    </style>
-
-
-</head>
-
-<body>
-
-    <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
-    <nav class="nav navbar navbar-dark navbar-expand-lg fixed-top">
-        <li class="nav-logo nav-item active"><a class="nav-logo-link nav-link my-lg-0" href="../index.html">Tripster</a></li>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse" id="collapsingNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item active"><a class="nav-link" href="create.html">Create</a></li>
-                <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
-                <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
-            </ul>
-
-            <ul class="navbar-nav ml-auto">
-                <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
-                <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
-            </ul>
         </div>
-    </nav>
-    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-
-<div class="header">
-    		<h2>Change Password</h2>
-
-
-    	<div class="input-group">
-      		<label>New Password</label>
-      		<input type="password" name="newpassword" >
-      	</div>
-
-      	<div class="input-group">
-      		<label>Confirm Password</label>
-      		<input type="password" name="Confirm Password">
-      	</div>
-
-      	<div class="input-group">
-      		<button type="submit" class="changepassword" name="changepassword">Change Password</button>
-      	</div>
-</div>	
-
-
-
-
-</body>
+        <div class="footer-container container-fluid">
+            <!-- - - - - - - Footer Elements- - - - - - - - - - - - - - - - - - - - - - - - -->
+            <div class="footer-margin row">
+                <p>This is where footer stuff will go</p>
+            </div>
+            <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
+        </div>
+    </body>
 </html>
