fixed bootstrap issue on reset password page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             			<div class="search">
             				<h3 class="headcenter1">Where do you want to go?</h3>
             				<input type="text" name="" class="searchterm" placeholder="Search here!">
-            				<a href="Common/create.html"><button type="submit" class="searchbtn"><i class="fa fa-search"></i></a>
+            				<a href="Common/create.html"><button type="submit" class="searchbtn" onclick="javascript:window.location.assign('Common/browse.html');"><i class="fa fa-search"></i></a>
             			</div>
             		</div>
                 </div>
