--- a/Common/reset_password.html
+++ b/Common/reset_password.html
@@ -13,9 +13,8 @@ and open the template in the editor.
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
         <link rel="stylesheet" type="text/css" href="../CSS/boot_nav.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/reset_pass.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/login.css">
     </head>
 
     <body>
@@ -62,8 +61,6 @@ and open the template in the editor.
                     </div>
                 </div>
             </div>
-
-
         </div>
 
         <div class="footer-container container-fluid">
@@ -72,6 +69,11 @@ and open the template in the editor.
                 <p>This is where footer stuff will go</p>
             </div>
             <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
+
+            <!-- Bootstrap Related Scripts -->
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         </div>
     </body>
 </html>
