--- a/Common/UploadTrip.html
+++ b/Common/UploadTrip.html
@@ -44,12 +44,12 @@
 
                     <div class="text-center">
 
-
+                        <div id="tripnamestuff">
                         <h2 class="extra_margin" style="margin-top: 60px;"> Enter Trip Name: </h2>
 
 
                         <textarea id="tripname" class="extra_margin"> </textarea>
-
+                      </div>
 
 
                     </div>
@@ -85,15 +85,15 @@
                     </div>
 
 
-                    <button type="button" class="btn btn-dark extra_margin">Upload Photos</button>
+                    <button id="uploadbutton" type="button" class="btn btn-dark extra_margin">Upload Photos</button>
 
 
                     <h3 class="extra_margin"> Write about your experience: </h3>
                     <textarea id="experiencetext" class="extra_margin" rows="10%" cols="100%"> </textarea>
-                    <h3 class="extra_margin"> Upload your favorite trip destinations and places you've stayed: </h3>
-                    <textarea id="tripdestinations" class="extra_margin" rows="10%" cols="100%"> </textarea>
+                    <h3 class="extra_margin"> Route information: </h3>
+                    <p> Information about Route will be automatically pulled from trip creation and added here </p>
 
-                    <button type="button" class="btn btn-primary extra_margin" style="margin-left:40px;" >Publish</button>
+                    <button type="button" class="btn btn-primary extra_margin" style="float:right">Publish</button>
 
                 </div>
 
