--- a/Common/UserProfile.html
+++ b/Common/UserProfile.html
@@ -39,22 +39,21 @@
 
             <div class="row extra_margin">
 
-                <div class="col-md-4">
+                <div class="col-md-3">
 
-                    <div class="text-center">
+                    <div id="profilestuff" class="text-center">
                         <img id="profileimage" src ="http://via.placeholder.com/300x250" class="rounded-circle"/>
 
                         <h2> User Name </h2>
 
-                        <a class="btn btn-primary btn-xs" href="#" role="Button"> Facebook</a>
-                        <a class="btn btn-primary btn-xs" href="#" role="Button"> Twitter</a>
-                        <a class="btn btn-primary btn-xs" href="#" role="Button"> Instagram</a>
-                        <a class="btn btn-primary btn-xs" href="#" role="Button"> Website</a>
+                        <a href="#"> <img src="../Images/fb.png" height="50px" width="50px"/></a>
+                        <a href="#"> <img src="../Images/ig.png" height="50px" width="50px"/></a>
+                        <a href="#"> <img src="../Images/twitter.png" height="50px" width="50px"/></a>
 
                     </div>
                 </div>
 
-                <div class="col-md-8">
+                <div class="col-md-9">
 
                     <img id="backgroundimage" src="../Images/graybackground.png"  width="100%" height="20%">
 
