--- a/Common/ViewTrip.html
+++ b/Common/ViewTrip.html
@@ -9,7 +9,6 @@
         <link rel="stylesheet" type="text/css" href="../CSS/boot_nav.css">
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="../CSS/create_styles.css">
     <link rel="stylesheet" type="text/css" href="../CSS/uploadtrip.css">
 
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -35,6 +34,7 @@
                 </ul>
             </div>
         </nav>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
         <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
         <div class="container-fluid">
 
@@ -87,16 +87,18 @@
                     <button type="button" class="btn btn-dark extra_margin">View Gallery</button>
 
                     <h3 class="extra_margin"> Their experience: </h3>
-                    <p class="extra_margin" > Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p class="extra_margin" > Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <h3 class="extra_margin"> Route: </h3>
                     <p class="extra_margin" > This information will be pulled from the database accordingly.</p>
 
-                    <h3 class="extra_margin"> Favorite trip destinations and places they stayed: </h3>
-                    <p class="extra_margin">  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
                 </div>
 
                 <div class="col-sm-2">
+                  <div id="rightsideuserinfo">
+                  <h2>Trip creator:</h2>
+                  <img id="rightsideprofilepic" src="../Images/emptyprofile.jpg" class="rounded-circle"/>
+                </div>
                 </div>
 
             </div>
