added login and sign up with firebase

--- a/Common/Login.html
+++ b/Common/Login.html
@@ -43,36 +43,7 @@ and open the template in the editor.
             <div class="bg-image-container container-fluid justify-content-center">
                 <div class="bg-image"></div>
             </div>
-            <div class="login-box-container row justify-content-center">
-                <div class="login-box col-lg-5">
-                	<h2 class="row justify-content-center">Login</h2>
-                	<div class="input-group">
-                  		<label>Username</label>
-                  		<input type="text" name="username" class="user-input" autocomplete="off">
-                    </div>
-
-                  	<div class="input-group">
-                  		<label>Password</label>
-                  		<input type="password" name="password" class="user-input">
-                  	</div>
-
-                  	<div class="input-group">
-                  		<button type="submit" class="btn" name="login_user" onclick="javascript:window.location.assign('../index.html');">Login</button>
-                  	</div>
-
-                    <div class="extra-links row justify-content-center">
-                      	<p>Not yet a member?
-                            <a href="Registration.html">Sign up</a>
-                      	</p>
-                    </div>
-                    <div class="extra-links row justify-content-center">
-                		<p>Forgot your password?
-                            <a href="reset_password.html">Click here to reset it</a>.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
+            <div id="login"></div>
 
         </div>
 
@@ -88,5 +59,36 @@ and open the template in the editor.
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        
+        <!-- Firebase SDK CDN-->
+        <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-app.js"></script>
+
+        <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+        <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-analytics.js"></script>
+
+        <!-- Add Firebase products that you want to use -->
+        <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-firestore.js"></script>
+
+        <script>
+            // Your web app's Firebase configuration
+            var firebaseConfig = {
+              apiKey: "AIzaSyByQptxJk7d9BloZov-dXvRyyXPrM5gbKs",
+              authDomain: "tripster-d8fe5.firebaseapp.com",
+              databaseURL: "https://tripster-d8fe5.firebaseio.com",
+              projectId: "tripster-d8fe5",
+              storageBucket: "tripster-d8fe5.appspot.com",
+              messagingSenderId: "211617557492",
+              appId: "1:211617557492:web:db96d3e71391dea702a7a1",
+              measurementId: "G-DD58MBZL68"
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+            firebase.analytics();
+        </script>
+
+        <script src="../JavaScripts/vue.min.js"></script>
+        <script src="../JavaScripts/login_signup.js"></script>
     </body>
 </html>
