--- a/Common/create.html
+++ b/Common/create.html
@@ -50,10 +50,10 @@
                             <b class="row">Start: </b>
                             <input class="loc-input" id="start" type="textbox" value="Lowell, MA">
                         </div>
-                        <div class="col-md-2">
+                        <!-- <div class="col-md-2">
                             <b class="row">Waypoint: </b>
                             <input class="loc-input" id="waypoint" type="textbox" value="Waltham, MA">
-                        </div>
+                        </div> -->
                         <div class="col-md-2">
                             <b class="row">End: </b>
                             <input class="loc-input" id="end" type="textbox" value="Boston, MA">
@@ -64,8 +64,14 @@
                     </div>
 
                     <div class="bottom-container row justify-content-center">
+                        
+                        
+
                         <div class="param-options-container col-md-2 justify-content-center">
-                            <div class="row badge p-2">
+
+                            <div id="addWaypoints"></div>
+
+                            <div class="row badge p-2 mt-2">
                                 <h4 class="p-2 text-left">Route options:</h4>
                             </div>
                             <div class="parameter row align-items-center">
@@ -211,6 +217,7 @@
 
         </script>
 
+        <script src="../JavaScripts/vue.min.js"></script>
         <script src="../JavaScripts/routeGeneration.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
