--- a/Common/Registration.html
+++ b/Common/Registration.html
@@ -71,6 +71,7 @@ and open the template in the editor.
     <!-- Add Firebase products that you want to use -->
     <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-database.js"></script>
 
     <script>
         // Your web app's Firebase configuration
