--- a/Common/UserProfile.html
+++ b/Common/UserProfile.html
@@ -29,6 +29,7 @@
 
                 <ul class="navbar-nav ml-auto">
                     <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
+		    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Log off</a></li>
                     <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
                 </ul>
             </div>
