--- a/Common/EditUserProfile.html
+++ b/Common/EditUserProfile.html
@@ -58,11 +58,11 @@
                     <img id="backgroundimage" src="../Images/graybackground.png"  width="100%" height="20%">
                     <div id="editstuff">
 
-                      <button id="editprofilebutton" type="button" class="btn btn-dark extra_margin profilebutton" onclick="onEditProfileClick()">Edit Profile</button>
+                      <button id="uploadphotosbutton" type="button" class="btn btn-dark extra_margin profilebutton" >Upload Photos</button>
 
                     </div>
                     <h3 id="about"class="extra_margin"> About Me: </h3>
-                    <p id=aboutmeText class="lead extra_margin"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+                    <textarea id="aboutmeText" class="lead extra_margin submissionfield" placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."> </textarea>
 
                     <h3 class="extra_margin"> My Recent Trips: </h3>
                     <div class="card-header round-pill">
@@ -83,12 +83,13 @@
                         </a>
                     </div>
                     <h3 class="extra_margin"> Places I'd Like To Go: </h3>
-                    <p id="placesText" class="lead extra_margin"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+                    <textarea id="placesText" class="lead extra_margin submissionfield" placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."> </textarea>
 
 
                     <h3 class="extra_margin"> Location: </h3>
-                    <p id="locationText" class="lead extra_margin"> Default Location </p>
+                    <input id="locationText" class="lead extra_margin" placeholder="Default Location" </input>
 
+                    <button id="submitbutton" type="button" class="btn btn-dark extra_margin profilebutton" onclick="onSubmitClicked()" >Submit</button>
                 </div>
 
             </div>
@@ -121,7 +122,7 @@
         <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-database.js"></script>
 
 
-        <script src="../JavaScripts/UserProfile.js"></script>
+        <script src="../JavaScripts/EditUserProfile.js"></script>
 
 	</body>
 </html>
