--- a/Common/EditUserProfile.html
+++ b/Common/EditUserProfile.html
@@ -87,7 +87,7 @@
 
 
                     <h3 class="extra_margin"> Location: </h3>
-                    <input id="locationText" class="lead extra_margin" placeholder="Default Location" </input>
+                    <textarea id="locationText" class="lead extra_margin" placeholder="Default Location"> </textarea>
 
                     <button id="submitbutton" type="button" class="btn btn-dark extra_margin profilebutton" onclick="onSubmitClicked()" >Submit</button>
                 </div>
