--- a/Common/EditUserProfile.html
+++ b/Common/EditUserProfile.html
@@ -28,9 +28,9 @@
                 </ul>
 
                 <ul class="navbar-nav ml-auto">
-                    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
-		    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Log off</a></li>
-                    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
+                    <li id="signinbutton" class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
+		                  <li id="logoutbutton" class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html" onclick="logout()">Log out</a></li>
+                    <li id="createaccountbutton" class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
                 </ul>
             </div>
         </nav>
@@ -44,11 +44,18 @@
                     <div id="profilestuff" class="text-center">
                         <img id="profileimage" src ="http://via.placeholder.com/300x250" class="rounded-circle"/>
 
-                        <h2> User Name </h2>
+                        <h2 id="userName"> User Name </h2>
 
+                        <div>
+                          <input id="UploadProfButton" type="button"  class="btn btn-dark extra_margin profilebutton" value="Update Profile Picture" onclick="onUploadProfButtonClick()"/>
+                          <input id="profFileInput" type="file" style="display:none;" onchange="onProfFileChanged(event)" />
+
+                        </div>
                         <a href="#"> <img src="../Images/fb.png" height="50px" width="50px"/></a>
                         <a href="#"> <img src="../Images/ig.png" height="50px" width="50px"/></a>
                         <a href="#"> <img src="../Images/twitter.png" height="50px" width="50px"/></a>
+
+
 
                     </div>
                 </div>
@@ -58,7 +65,8 @@
                     <img id="backgroundimage" src="../Images/graybackground.png"  width="100%" height="20%">
                     <div id="editstuff">
 
-                      <button id="uploadphotosbutton" type="button" class="btn btn-dark extra_margin profilebutton" >Upload Photos</button>
+                      <input id="fileInput" type="file" style="display:none;" onchange="onFileChanged(event)" />
+                      <input type="button"  class="btn btn-dark extra_margin profilebutton" value="Upload Photos" onclick="onUploadClicked()"/>
 
                     </div>
                     <h3 id="about"class="extra_margin"> About Me: </h3>
@@ -118,8 +126,9 @@
 
         <!-- Add Firebase products that you want to use -->
         <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-auth.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-storage.js"></script>
+
 
 
         <script src="../JavaScripts/EditUserProfile.js"></script>
