Finally got route creation working
Route creation is in fact working now, and includes all the hotels/gas/etc in the route line. Still a decent amount of work to do in terms of functionality such as adding or removing hotels/gas/food, as well as adding tourist destinations along the way (which will simply be the same process as the hotels/gas/food)

--- a/Common/create.html
+++ b/Common/create.html
@@ -42,7 +42,17 @@
                     <!-- This will be where the map/display of the trip generation will show -->
                     <!-- Until the Google Maps API is fully implemented or at least partially the results will display here -->
                     <div id = "map-container" class="row justify-content-center">
-                        <div id="map" class="col-lg-8"></div>
+                        <div class="loading-cover col-lg-8" id="load-cover">
+                            <div class="loading-message">
+                                Currently Designing your Perfect Road Trip!
+                                One Moment Please...
+                                <div class="loader"></div>
+                            </div>
+
+                        </div>
+                        <div id="map" class="col-lg-8">
+
+                        </div>
                     </div>
 
                     <div id="loc-dest-panel" class="row justify-content-center align-items-end">
