--- a/Common/browse.html
+++ b/Common/browse.html
@@ -76,7 +76,7 @@
                         <div class="card-header">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
                                 <div class="row">
-                                    <div class="col">Boston, MA -> San Diego, CA</div>
+                                    <div id="card2" class="col">Boston, MA -> San Diego, CA</div>
                                     <div class="col-3 border-left">User 2</div>
                                 </div>
                             </a>
@@ -94,7 +94,7 @@
                         <div class="card-header">
                             <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
                                 <div class="row">
-                                    <div class="col">Seattle, WA -> Portland, OR</div>
+                                    <div id="card3" class="col">Seattle, WA -> Portland, OR</div>
                                     <div class="col-3 border-left">User 3</div>
                                 </div>
                             </a>
