--- a/Common/create.html
+++ b/Common/create.html
@@ -108,9 +108,11 @@
                                 <div id="collapseOne" class="collapse show" data-parent="#accordion">
                                     <div class="card-body">
                                         <div id="directions-panel"></div>
+                                        <div id="tripOptions"></div>
                                     </div>
                                 </div>
                             </div>
+                        <!--
                             <div class="card">
                                 <div class="card-header">
                                     <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
@@ -133,6 +135,7 @@
                                     </div>
                                 </div>
                             </div>
+                        -->
                         </div>
 
                     </div>
