sing in to login

--- a/Common/UserProfile.html
+++ b/Common/UserProfile.html
@@ -28,7 +28,7 @@
                 </ul>
 
                 <ul class="navbar-nav ml-auto">
-                  <li id="signinbutton" class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
+                  <li id="signinbutton" class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Login</a></li>
                   <li id="createaccountbutton" class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
                   <li id="logoutbutton" class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html" onclick="logout()">Logout</a></li>
 
