--- a/Common/Registration.html
+++ b/Common/Registration.html
@@ -35,7 +35,7 @@ and open the template in the editor.
             </ul>
 
             <ul class="navbar-nav ml-auto">
-                <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
+                <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Login</a></li>
                 <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
             </ul>
         </div>
